--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
     <script type="text/javascript" src="libs/unobservable.js"></script>
 
-    <script type="text/javascript" src="base.js"></script>
-    <script type="text/javascript" src="movable.js"></script>
-    <script type="text/javascript" src="floor.js"></script>
-    <script type="text/javascript" src="user.js"></script>
-    <script type="text/javascript" src="elevator.js"></script>
-    <script type="text/javascript" src="interfaces.js"></script>
-    <script type="text/javascript" src="world.js"></script>
-    <script type="text/javascript" src="presenters.js"></script>
-    <script type="text/javascript" src="challenges.js"></script>
-    <script type="text/javascript" src="fitness.js"></script>
-    <script type="text/javascript" src="app.js"></script>
+    <script type="text/javascript" src="scripts/base.js"></script>
+    <script type="text/javascript" src="scripts/movable.js"></script>
+    <script type="text/javascript" src="scripts/floor.js"></script>
+    <script type="text/javascript" src="scripts/user.js"></script>
+    <script type="text/javascript" src="scripts/elevator.js"></script>
+    <script type="text/javascript" src="scripts/interfaces.js"></script>
+    <script type="text/javascript" src="scripts/world.js"></script>
+    <script type="text/javascript" src="scripts/presenters.js"></script>
+    <script type="text/javascript" src="scripts/challenges.js"></script>
+    <script type="text/javascript" src="scripts/fitness.js"></script>
+    <script type="text/javascript" src="scripts/app.js"></script>
 
 
     <script type="text/template" id="user-template">
