--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
 
 	<script type="text/javascript" src="libs/unobservable.js"></script>
 
-	<script type="text/javascript" src="scripts/base.js"></script>
-	<script type="text/javascript" src="scripts/movable.js"></script>
-	<script type="text/javascript" src="scripts/floor.js"></script>
-	<script type="text/javascript" src="scripts/user.js"></script>
-	<script type="text/javascript" src="scripts/elevator.js"></script>
-	<script type="text/javascript" src="scripts/interfaces.js"></script>
-	<script type="text/javascript" src="scripts/world.js"></script>
+	
+	<script type="module" src="scripts/base.js"></script>
+	<script type="module" src="scripts/movable.js"></script>
+	<script type="module" src="scripts/floor.js"></script>
+	<script type="module" src="scripts/user.js"></script>
+	<script type="module" src="scripts/elevator.js"></script>
+	<script type="module" src="scripts/interfaces.js"></script>
+	<script type="module" src="scripts/world.js"></script>
 	<script type="text/javascript" src="scripts/presenters.js"></script>
-	<script type="text/javascript" src="scripts/challenges.js"></script>
+	<script type="module" src="scripts/challenges.js"></script>
 	<script type="text/javascript" src="scripts/fitness.js"></script>
-	<script type="text/javascript" src="scripts/app.js"></script>
-
+	<script type="module" src="scripts/app.js"></script>
+	
+	<!-- <script type="text/javascript" src="scripts/bundle.js"></script> -->
 
 	<script type="text/template" id="user-template">
 		<i class="movable fa user fa-{u.displayType} {state}"></i>
