--- a/test/index.html
+++ b/test/index.html
@@ -11,15 +11,15 @@
 
 	<script type="text/javascript" src="../libs/unobservable.js"></script>
 
-	<script type="text/javascript" src="../scripts/base.js"></script>
-	<script type="text/javascript" src="../scripts/movable.js"></script>
-	<script type="text/javascript" src="../scripts/floor.js"></script>
-	<script type="text/javascript" src="../scripts/user.js"></script>
-	<script type="text/javascript" src="../scripts/elevator.js"></script>
-	<script type="text/javascript" src="../scripts/interfaces.js"></script>
-	<script type="text/javascript" src="../scripts/world.js"></script>
+	<script type="module" src="../scripts/base.js"></script>
+	<script type="module" src="../scripts/movable.js"></script>
+	<script type="module" src="../scripts/floor.js"></script>
+	<script type="module" src="../scripts/user.js"></script>
+	<script type="module" src="../scripts/elevator.js"></script>
+	<script type="module" src="../scripts/interfaces.js"></script>
+	<script type="module" src="../scripts/world.js"></script>
 	<script type="text/javascript" src="../scripts/presenters.js"></script>
-	<script type="text/javascript" src="../scripts/challenges.js"></script>
+	<script type="module" src="../scripts/challenges.js"></script>
 
 
 	<link rel="shortcut icon" type="image/png" href="jasmine/jasmine_favicon.png">
@@ -29,7 +29,7 @@
 	<script type="text/javascript" src="jasmine/boot.js"></script>
 	<script type="text/javascript" src="jasmine/jasmine-matchers.js"></script>
 
-	<script type="text/javascript" src="tests.js"></script>
+	<script type="module" src="tests.js"></script>
 
 	<script>
 		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
