--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	<script type="text/javascript" src="libs/codemirror/addon/edit/closebrackets.js"></script>
 	<script type="text/javascript" src="libs/codemirror/mode/javascript/javascript.js"></script>
 
-	<link rel="stylesheet" data-name="vs/editor/editor.main" href="../node_modules/monaco-editor/min/vs/editor/editor.main.css">
-	<script>var require = { paths: { 'vs': '../node_modules/monaco-editor/min/vs' } };</script>
-	<script type="text/javascript" src="../node_modules/monaco-editor/min/vs/loader.js"></script>
-	<script type="text/javascript" src="../node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-	<script type="text/javascript" src="../node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+	<link rel="stylesheet" data-name="vs/editor/editor.main" href="./node_modules/monaco-editor/min/vs/editor/editor.main.css">
+	<script>var require = { paths: { 'vs': './node_modules/monaco-editor/min/vs' } };</script>
+	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/loader.js"></script>
+	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
 
 	<script type="text/javascript" src="libs/unobservable.js"></script>
 
