get project back to a working state after a while
fixed fitnessworker
created ES6 module version of riot.js for module-using files
moved most libs to /ts/libs instead of /libs
moved CodeMirror non-js assets to /codemirror_resources

--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="font-awesome-4.1-1.0/css/font-awesome.min.css" type="text/css" media="all">
 	<link href='//fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="libs/codemirror/codemirror.css">
-	<link rel="stylesheet" href="libs/codemirror/themes/solarized.css">
+	<link rel="stylesheet" href="codemirror_resources/codemirror.css">
+	<link rel="stylesheet" href="codemirror_resources/themes/solarized.css">
 	<link rel="stylesheet" href="style.css" type="text/css" media="all">
 
-	<script type="text/javascript" src="libs/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="libs/lodash.min.js"></script>
-	<script type="text/javascript" src="libs/riot.js"></script>
+	<script type="text/javascript" src="scripts/libs/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="scripts/libs/lodash.min.js"></script>
+	<script type="text/javascript" src="scripts/libs/riot.js"></script> <!-- Note: Only for presenters.js ? -->
 
-	<script type="text/javascript" src="libs/codemirror/codemirror.js"></script>
-	<script type="text/javascript" src="libs/codemirror/addon/edit/closebrackets.js"></script>
-	<script type="text/javascript" src="libs/codemirror/mode/javascript/javascript.js"></script>
+	<script type="text/javascript" src="scripts/libs/codemirror/codemirror.js"></script>
+	<script type="text/javascript" src="scripts/libs/codemirror/addon/edit/closebrackets.js"></script>
+	<script type="text/javascript" src="scripts/libs/codemirror/mode/javascript/javascript.js"></script>
 
 	<link rel="stylesheet" data-name="vs/editor/editor.main" href="./node_modules/monaco-editor/min/vs/editor/editor.main.css">
 	<script>var require = { paths: { 'vs': './node_modules/monaco-editor/min/vs' } };</script>
@@ -23,7 +23,7 @@
 	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
 	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
 
-	<script type="text/javascript" src="libs/unobservable.js"></script>
+	<script type="text/javascript" src="scripts/libs/unobservable.js"></script>
 
 	
 	<script type="module" src="scripts/base.js"></script>
@@ -35,7 +35,7 @@
 	<script type="module" src="scripts/world.js"></script>
 	<script type="text/javascript" src="scripts/presenters.js"></script>
 	<script type="module" src="scripts/challenges.js"></script>
-	<script type="text/javascript" src="scripts/fitness.js"></script>
+	<script type="module" src="scripts/fitness.js"></script>
 	<script type="module" src="scripts/app.js"></script>
 	
 	<!-- <script type="text/javascript" src="scripts/bundle.js"></script> -->
