fix test suite and convert presenters.js to ts

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<script type="module" src="scripts/elevator.js"></script>
 	<script type="module" src="scripts/interfaces.js"></script>
 	<script type="module" src="scripts/world.js"></script>
-	<script type="text/javascript" src="scripts/presenters.js"></script>
+	<script type="module" src="scripts/presenters.js"></script>
 	<script type="module" src="scripts/challenges.js"></script>
 	<script type="module" src="scripts/fitness.js"></script>
 	<script type="module" src="scripts/app.js"></script>
