--- a/test/index.html
+++ b/test/index.html
@@ -5,11 +5,11 @@
 	<title>Elevator Saga tests</title>
 	<meta charset="UTF-8">
 
-	<script type="text/javascript" src="../libs/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="../libs/lodash.min.js"></script>
-	<script type="text/javascript" src="../libs/riot.js"></script>
+	<script type="text/javascript" src="../scripts/libs/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="../scripts/libs/lodash.min.js"></script>
+	<script type="text/javascript" src="../scripts/libs/riot.js"></script>
 
-	<script type="text/javascript" src="../libs/unobservable.js"></script>
+	<script type="text/javascript" src="../scripts/libs/unobservable.js"></script>
 
 	<script type="module" src="../scripts/base.js"></script>
 	<script type="module" src="../scripts/movable.js"></script>
@@ -18,7 +18,7 @@
 	<script type="module" src="../scripts/elevator.js"></script>
 	<script type="module" src="../scripts/interfaces.js"></script>
 	<script type="module" src="../scripts/world.js"></script>
-	<script type="text/javascript" src="../scripts/presenters.js"></script>
+	<script type="module" src="../scripts/presenters.js"></script>
 	<script type="module" src="../scripts/challenges.js"></script>
 
 
