edit source files for parcel compatibility (has more errors under windows than linux)

--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
 	<meta charset="UTF-8">
 	<link rel="stylesheet" href="font-awesome-4.1-1.0/css/font-awesome.min.css" type="text/css" media="all">
 	<link href='//fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" href="codemirror_resources/codemirror.css">
-	<link rel="stylesheet" href="codemirror_resources/themes/solarized.css">
+	<link rel="stylesheet" href="resources/codemirror/codemirror.css">
+	<link rel="stylesheet" href="resources/codemirror/themes/solarized.css">
 	<link rel="stylesheet" href="style.css" type="text/css" media="all">
 
-	<script type="text/javascript" src="scripts/libs/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="scripts/libs/lodash.min.js"></script>
-	<script type="text/javascript" src="scripts/libs/riot.js"></script> <!-- Note: Only for presenters.js ? -->
+	<!--<script type="text/javascript" src="scripts/libs/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="scripts/libs/lodash.min.js"></script>-->
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	<script type="text/javascript" src="ts/libs/riot.js"></script> <!-- Note: Only for presenters.js ? -->
 
-	<script type="text/javascript" src="scripts/libs/codemirror/codemirror.js"></script>
-	<script type="text/javascript" src="scripts/libs/codemirror/addon/edit/closebrackets.js"></script>
-	<script type="text/javascript" src="scripts/libs/codemirror/mode/javascript/javascript.js"></script>
+	<script type="text/javascript" src="ts/libs/codemirror/codemirror.js"></script>
+	<script type="text/javascript" src="ts/libs/codemirror/addon/edit/closebrackets.js"></script>
+	<script type="text/javascript" src="ts/libs/codemirror/mode/javascript/javascript.js"></script>
 
-	<link rel="stylesheet" data-name="vs/editor/editor.main" href="./node_modules/monaco-editor/min/vs/editor/editor.main.css">
-	<script>var require = { paths: { 'vs': './node_modules/monaco-editor/min/vs' } };</script>
-	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/loader.js"></script>
-	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
-	<script type="text/javascript" src="./node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+	<link rel="stylesheet" data-name="vs/editor/editor.main" href="node_modules/monaco-editor/min/vs/editor/editor.main.css">
+	<!--
+		<script>var require = { paths: { 'vs': './node_modules/monaco-editor/min/vs' } };</script>
+	<script type="text/javascript" src="node_modules/monaco-editor/min/vs/loader.js"></script>
+	<script type="text/javascript" src="node_modules/monaco-editor/min/vs/editor/editor.main.nls.js"></script>
+	<script type="text/javascript" src="node_modules/monaco-editor/min/vs/editor/editor.main.js"></script>
+	-->
 
-	<script type="text/javascript" src="scripts/libs/unobservable.js"></script>
+	<script type="text/javascript" src="ts/libs/unobservable.js"></script>
 
 	
-	<script type="module" src="scripts/base.js"></script>
+	<!--<script type="module" src="scripts/base.js"></script>
 	<script type="module" src="scripts/movable.js"></script>
 	<script type="module" src="scripts/floor.js"></script>
 	<script type="module" src="scripts/user.js"></script>
@@ -35,8 +38,8 @@
 	<script type="module" src="scripts/world.js"></script>
 	<script type="module" src="scripts/presenters.js"></script>
 	<script type="module" src="scripts/challenges.js"></script>
-	<script type="module" src="scripts/fitness.js"></script>
-	<script type="module" src="scripts/app.js"></script>
+	<script type="module" src="scripts/fitness.js"></script>-->
+	<script src="ts/app.ts"></script>
 	
 	<!-- <script type="text/javascript" src="scripts/bundle.js"></script> -->
 
@@ -92,7 +95,7 @@
 	</script>
 
 	<!-- Empty source attribute makes browsers ignore contained JS (but editors still give syntax highlighting) -->
-	<script type="text/javascript" id="default-elev-implementation" src="">
+	<script type="text/template-javascript" id="default-elev-implementation" src="">
 export function init(elevators, floors) {
 	var elevator = elevators[0]; // Let's use the first elevator
 
@@ -107,20 +110,26 @@ export function update(dt, elevators, floors) {
 	// We normally don't need to do anything here
 }
 	</script>
-	<script type="text/javascript" id="devtest-elev-implementation" src="">
+	<script type="text/template-javascript" id="devtest-elev-implementation" src="">
+function elevatorPriority(e, floorNum) {
+	return
+		(e.destinationQueue.includes(floorNum) ? 4 : 0) +
+		(-e.destinationQueue.length * e.destinationQueue.length) +
+		(-e.loadFactor() * e.loadFactor() * 3);
+}
+
 export function init(elevators, floors) {
 	function selectElevatorForFloorPickup(floorNum) {
-		return _.max(elevators, function(e) {
-			return (_.contains(e.destinationQueue, floorNum) ? 4 : 0) +
-				(-e.destinationQueue.length*e.destinationQueue.length) +
-				(-e.loadFactor()*e.loadFactor() * 3);
-		});
+		let with_priority = elevators
+			.map(e => [e, elevatorPriority(e, floorNum)])
+		with_priority.sort((a, b) => b[1] - a[1]) // sort by max priority
+		with_priority[0]
 	};
 
 	floors.forEach(floor => {
-		floor.on("down_button_pressed up_button_pressed", function() {
+		floor.on("down_button_pressed up_button_pressed", function () {
 			var elevator = selectElevatorForFloorPickup(floor.level);
-			if(!_.contains(elevator.destinationQueue, floor.level)) {
+			if (elevator && !elevator.destinationQueue.includes(floor.level)) {
 				elevator.goToFloor(floor.level);
 			}
 		});
@@ -133,8 +142,6 @@ export function init(elevators, floors) {
 export function update(dt, elevators, floors) {
 }
 	</script>
-
-
 </head>
 <body>
 	<div class="container">
