--- a/test/index.html
+++ b/test/index.html
@@ -5,29 +5,17 @@
 	<title>Elevator Saga tests</title>
 	<meta charset="UTF-8">
 
-	<script type="text/javascript" src="../scripts/libs/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="../scripts/libs/lodash.min.js"></script>
-	<script type="text/javascript" src="../scripts/libs/riot.js"></script>
-
-	<script type="text/javascript" src="../scripts/libs/unobservable.js"></script>
-
-	<script type="module" src="../scripts/base.js"></script>
-	<script type="module" src="../scripts/movable.js"></script>
-	<script type="module" src="../scripts/floor.js"></script>
-	<script type="module" src="../scripts/user.js"></script>
-	<script type="module" src="../scripts/elevator.js"></script>
-	<script type="module" src="../scripts/interfaces.js"></script>
-	<script type="module" src="../scripts/world.js"></script>
-	<script type="module" src="../scripts/presenters.js"></script>
-	<script type="module" src="../scripts/challenges.js"></script>
-
-
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+	
 	<link rel="shortcut icon" type="image/png" href="jasmine/jasmine_favicon.png">
 	<link rel="stylesheet" type="text/css" href="jasmine/jasmine.css">
 	<script type="text/javascript" src="jasmine/jasmine.js"></script>
 	<script type="text/javascript" src="jasmine/jasmine-html.js"></script>
-	<script type="text/javascript" src="jasmine/boot.js"></script>
 	<script type="text/javascript" src="jasmine/jasmine-matchers.js"></script>
+	<script type="text/javascript" src="jasmine/boot.js"></script>
+
+	<script type="text/javascript" src="../ts/libs/riot.js"></script>
+	<script type="text/javascript" src="../ts/libs/unobservable.js"></script>
 
 	<script type="module" src="tests.js"></script>
 
