--- a/test/performance.html
+++ b/test/performance.html
@@ -8,8 +8,8 @@
 		body { font-family: Arial, Helvetica, sans-serif;}
 	</style>
 
-	<script type="text/javascript" src="../libs/jquery-2.1.1.min.js"></script>
-	<script type="text/javascript" src="../libs/lodash.min.js"></script>
+	<!--<script type="text/javascript" src="../libs/jquery-2.1.1.min.js"></script>
+	<script type="text/javascript" src="../libs/lodash.min.js"></script>-->
 	<script type="text/javascript" src="../libs/riot.js"></script>
 
 	<script type="text/javascript" src="../libs/unobservable.js"></script>
